--- a/Uebung01/index.html
+++ b/Uebung01/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="author" content="Melanie Beer">
+		<title>Melanie Beer</title>
+		<link rel="stylesheet" type="text/css" href="main.css">
+    </head>
+    <body>
+	
+        <header>
+            <a>Melanie Beer</a> <br>
+			<p>Baby Animal</p>
+        </header>
+    
+        <main>
+			
+				 <img src="https://cdn.pixabay.com/photo/2022/09/07/09/29/cheetah-7438381_1280.jpg" height="auto" width="40%" style="float: left; margin-top: 50px; padding-right: 50px; "alt="Bild " >
+        </main>
 
+        <table>
+            <tr>
+              <th>1</th>
+              <th>2</th>
+              <th>3</th>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>5</td>
+              <td>6
+              </td>
+             </tr>
+             <tr>
+               <td>7</td>
+               <td>8</td>
+               <td>9</td>
+             </tr>
+          </table>
+		
+
+	
+    </body>
+</html>
